client/app/assets/less/redash/query.less
body.fixed-layout {
  padding: 0;
  overflow: hidden;

  app-view {
    display: flex;
    flex-direction: column;

    width: 100vw;
    height: 100vh;

    > div {
      flex-grow: 1;
      display: flex;
    }
  }
}

.bottom-controller {
  padding: 10px 15px;
  background: #fff;
  display: flex;
  align-items: center;

  button, div, span {
    position: relative;
  }

  div:last-child {
    flex-grow: 1;
    text-align: right;
  }

  &:before {
    content: '';
    height: 50px;
    position: fixed;
    bottom: 0;
    width: 100%;
    pointer-events: none;
    left: 0;
  }
}

.p-b-60 {
 padding-bottom: 60px !important;
}

.bottom-controller-container {
  box-shadow: 0 0 9px 0 rgba(102, 136, 153, 0.15);
  z-index: 1;
  border: none !important;
  flex-shrink: 0;
}

.query-metadata__bottom {
  margin: 0 10px;
}

.bottom-controller, .bottom-controller-container {
  .query-metadata__property {
    margin-right: 5px;
  }
}

// Editor
edit-in-place p, span.editable {
  display: inline-block;
}

edit-in-place p.editable:hover {
  display: inline-block;
}

.editor__control {
  margin-top: 10px;

  .dropdown-toggle {
    margin-right: 0;
  }
}

.filter-container {
  margin-bottom: 10px;
}

.editor__control--right {
  text-align: right;
}

.source-control {

}

.ace_editor.ace_autocomplete .ace_completion-highlight {
  text-shadow: none !important;
  background: #ffff005e;
  font-weight: 600;
}

.query-metadata {
  background: #fff;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  table {
    width: 100%;
    white-space: nowrap;
    text-overflow: ellipsis;

    td {
      padding: 3px 0;
      vertical-align: top;
    }

    tr {
      td:first-of-type {
        padding-right: 5px;
      }
    }
  }

  p {
    &:last-of-type {
      margin-bottom: 0;
    }

    display: flex;
    justify-content: space-between;
  }

  .query-metadata__property {
    width: 60px;
    display: inline-block;
  }

  ._query-metadata__time {

  }
}

.editor__control {
  .form-control {
    height: 30px;
  }
}

.schema-container {
  background: transparent;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.editor__left {
  height: 100% !important;
  width: calc(~'25% - 10px');
  margin-right: 10px;

  .form-control {
    height: 30px;
  }
}

.query-alerts {
  .alert {
    margin-bottom: 15px;
  }
}

.editor__container {
  .btn__format {
    margin-top: -50px;
    margin-right: 10px;
    z-index: 999;
    position: relative;
    opacity: 0;
    transition: transform 0.12s ease-out;
    transition-duration: 0.3s;
    transition-property: opacity;
  }

  &:hover {
    .btn__format {
      opacity: 1;
    }
  }
}

.paginator-container {
  text-align: center;
}

.tile {
  .paginator-container {
    text-align: center;
    margin-top: 10px;
  }
}

.embed__vis {

}

.query__vis {
  table {
    border: 1px solid #f0f0f0;
  }

  .paginator-container {
    text-align: left;
    margin-top: 10px;

    li:first-of-type {
      margin-left: 0;
    }
  }
}

.visualization-renderer .pagination {
  margin-top: 10px;
}

.embed__vis {
  display: flex;
  flex-flow: column;
}

.widget-wrapper {
  .body-container {
    filters {
      display: block;
      padding-left: 15px;
    }
  }
}

.page-header--query {
  display: flex;
  align-items: center;

  h3 {
    display: inline-block;
    margin-right: 10px;
  }
}

.schema-browser {
  overflow-y: auto;
}

.query-page-wrapper {
  display: flex;
  flex-direction: column;
}

.query-fullscreen {
  background: #fff;
  padding: 0;
  box-shadow: rgba(102, 136, 153, 0.15) 0 4px 9px -3px;
  flex-grow: 1;
  display: flex;
  width: 100vw;

  .tile, .tiled {
    box-shadow: none;
    padding: 15px 0 !important;
  }

  nav {
    position: relative;
    display: flex;
    flex-flow: column;
    flex-basis: 25%;
    flex-shrink: 0;
    max-width: 600px;
    min-width: 10px;
    overflow-x: hidden;

    .schema-container {
    }

    .editor__left__data-source,
    .schema-control,
    .query-metadata--history,
    .editor {
      flex-shrink: 0;
    }

    .query-metadata {
      border-top: 1px solid #efefef;
    }

    .query-metadata, .editor__left__schema, .editor__left__data-source {
      padding: 15px;
    }

    .editor__left__schema {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
      padding-bottom: 0;
      padding-top: 0 !important;
      position: relative;

      schema-browser {
        position: absolute;
        left: 15px;
        top: 0;
        right: 15px;
        bottom: 0;
      }
    }
  }
  main {
    display: flex;
    height: 100%;
  }
  .content {
    background: #fff;
    flex-grow: 1;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    align-content: space-around;
    padding: 0;
    overflow-x: hidden;

    .editor {
      border-bottom: 1px solid #efefef;
    }

    pivot-table-renderer > table, grid-renderer > div, visualization-renderer > div {
      overflow: visible;
    }

    .tab-nav {
      flex-shrink: 0;
    }
  }
  .row {
    background: #fff;
    z-index: 9;
    min-height: 50px;

    &.resizable {
      flex: 0 0 300px;
    }

    &.editor {
      display: flex;
      flex-flow: row nowrap;
      justify-content: space-around;
      align-content: space-around;
      overflow: hidden;
    }

    .row {
      display: block;
      min-height: 0;
    }
  }

  section {
    box-sizing: border-box;
    flex: 1;
    min-width: 30px;
    &.resizable {
      flex: 0 0 300px;
    }
  }

  // **********************************************************************
  // directive styles
  // **********************************************************************
  .resizable {
    position: relative;
    &.no-transition {
      transition: none !important;
    }
  }
  .rg-right, .rg-left, .rg-top, .rg-bottom {
    display: block;
    width: 10px;
    height: 10px;
    line-height: @spacing;
    position: absolute;
    z-index: 99;

    span {
      position: absolute;
      box-sizing: border-box;
      display: block;
      border: 1px solid #ccc;
    }
  }
  .rg-right, .rg-left {
    span {
      border-width: 0 1px;
      top: 50%;
      margin: -10px 0 0 @spacing/4;
      height: 20px;
      width: 3px;
    }
  }
  .rg-top, .rg-bottom {
    span {
      border-width: 1px 0;
      left: 50%;
      margin: @spacing/4 0 0 -10px;
      width: 20px;
      height: 3px;
    }
  }
  .rg-top     {
    cursor: row-resize;
    width: 100%;
    top: 0;
    left: 0;
    margin-top: -@spacing/2;
  }
  .rg-right   {
    cursor: col-resize;
    border-right: 1px solid #efefef;
    height: 100%;
    right: 0;
    top: 0;
    margin-right: 0px;

    &:hover {
      background: fade(@redash-gray, 6%);
    }
  }
  .rg-bottom  {
    cursor: row-resize;
    background: #fff;
    width: 100%;
    bottom: 0;
    left: 0;
    margin-bottom: 0;

    &:hover {
      background: fade(@redash-gray, 6%);
    }
  }
  .rg-left    {
    cursor: col-resize;
    height: 100%;
    left: 0;
    top: 0;
    margin-left: -@spacing;
  }
}

.datasource-small {
  visibility: hidden;
}

.query-fullscreen .query-metadata__mobile {
  display: none;
}


// Visualization editor
.modal-xl .modal-content {
  border: none;
}

.visualization-editor {
  .modal-title {
    font-weight: 600;
    font-size: 20px;
  }

  .modal-body {
    bottom: 50px;
  }

  .modal-footer {
    height: auto;
  }

  .visualization-editor__right {
    margin-top: 23px;
    border: 1px solid #eee;
    border-radius: 3px;

    .parameter-container {
      padding-left: 25px;
      margin-top: 10px;
    }
  }
}


// Left nav fixes for filling all the space
nav .rg-bottom {
  visibility: hidden;
}

.query-metadata--refresh {
  height: 50px;
  border: none !important;

  .query-metadata__property {
    width: auto;
  }

  p {
    display: block;
  }
}

// Smaller screens

@media (max-width: 880px) {
  .query-fullscreen {
    flex-direction: column;
    overflow: hidden;

    nav {
      display: none;
    }

    .schema-container {
      display: none;
    }
  }

  .query-page-wrapper {
    .container {
      margin-left: 0;
      margin-right: 0;
    }
  }

  .query-fullscreen .query-metadata__mobile {
    display: block;
    border-bottom: 1px solid #efefef;
    padding: 10px 0;
    min-height: 0 !important;
    flex-shrink: 0;
  }

  a.navbar-brand {
    display: none;
  }

  .page-header--query {
    padding-left: 0px !important;

    h3 {
      line-height: 1.25;
    }
  }

  .query-fullscreen .content {
    height: 100%;
  }

  .datasource-small {
    visibility: visible;
  }

  .query-fullscreen {

    main {
      flex-direction: column-reverse;

      nav {
        width: 100%;
        max-width: 100%;
        border-right: none;

        .editor__left__schema {
          height: 300px !important;
        }

        .rg-right {
          display: none;
        }
      }
    }

    .content {
      width: 100%;
    }
  }
}


@media (max-width: 438px) {
  .btn--showhide {
    margin-bottom: 5px;
  }

  .btn-publish {
    margin-bottom: 5px;
  }
}

@media (max-width: 768px) {
  .editor__left__schema, .editor__left__data-source {
    display: none;
  }

  a.navbar-brand {
    display: block;
  }

  .filter-container {
    padding-right: 0;
  }

  .btn-edit-visualisation {
    display: none;
  }
}

